--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1157,7 +1157,7 @@ div.section-animator-box {
 }
 
 div.section-animator-box div.section-box {
-  position: absolute;
+  position: relative;
   top: 0;
   left: 0;
   width: 600px;
