fix animation btw revisions

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1075,7 +1075,7 @@ div.section-animator-box {
 }
 
 div.section-animator-box div.section-box {
-  position: relative;
+  position: absolute;
   top: 0;
   left: 0;
   width: 600px;
