use text cursor on rich editor div

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -409,6 +409,7 @@ div.rich-editor-container div.rich-editor:focus,
 div.rich-editor-container div.rich-editor.editing {
   outline: none;
   overflow: hidden;
+  cursor: text;
   border: 1px solid black;
 }
 
