--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -873,10 +873,6 @@ button.oc-btn {
   margin-top: 30px;
 }
 
-button.oc-btn.oc-success {
-  color: green;
-}
-
 button.oc-btn.oc-success.disabled {
   opacity: 0.3;
 }
@@ -1318,4 +1314,48 @@ div.charts div.values-navigator {
   float: left;
   cursor: pointer;
   color: rgba(0, 0, 0, 0.8);
+}
+
+div.oc-popover-container {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: transparent;
+  z-index: 1031;
+}
+
+div.oc-popover {
+  position: absolute;
+  width: 390px;
+  height: 200px;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -145px;
+  background-color: white;
+  text-align: center;
+  border: 1px solid rgba(0, 0, 0, 0.8);
+  border-radius: 4px;
+  overflow: auto;
+  padding: 20px 0px 10px 10px;
+}
+
+/* OC Colors */
+.gray {
+  color: #ADADAD;
+}
+
+.green {
+  color: #26C485;
+}
+
+.red {
+  color: #d72a46;
+}
+
+.blue {
+  color: #109DB7;
 }
