fix login button style under the navbar

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -1452,3 +1452,7 @@ div.oc-popover {
 .growth-metric-edit-row input#mtr-name{
   height: 28px;
 }
+
+.navbar-inverse .navbar-nav>li>a{
+  padding: 5px;
+}
