Change Slack button in top right for logged out user into Sign in / Sign up button.

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -46,6 +46,10 @@ a:hover, a:hover *{
     border: 0;
 }
 
+button.login-button {
+  margin-top: 8px;
+}
+
 /* Hide for mobile, show later */
  .sidebar {
     display: none;
