fix revisions navigator rule

--- a/scss/partials/_revisions_navigator.scss
+++ b/scss/partials/_revisions_navigator.scss
@@ -37,7 +37,7 @@ div.revisions-navigator {
     }
   }
 
-  div.revisions-navigator div.revisions-navigator-right {
+  div.revisions-navigator-right {
     float: right;
 
     div.single-next,
