WIP: dashboard header.

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,8 @@
 @import "partials/_navbar";
 @import "partials/_company_profile";
 @import "partials/_company_dashboard";
+@import "partials/_company_header";
+@import "partials/_category_nav";
 @import "partials/_popover";
 @import "partials/_new_section_popover";
 @import "partials/_update_footer";
