fix minor css issue on firefox

--- a/scss/partials/_editable_title.scss
+++ b/scss/partials/_editable_title.scss
@@ -36,6 +36,7 @@ div.editable-title-container{
   }
 
   textarea.editable-title {
+    background-color: transparent;
     border: 1px solid white;
     outline: none;
     resize: none;
