Final style and code cleanup. Remove the static HTML/CSS design.

--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -3,6 +3,7 @@ div.company-dashboard {
   nav.company-header {
     padding-top: 15px;
     background-color: $oc_white;
+    border-bottom-color: transparent;
   }
 
   button.round {
