show share button on dashboard instead of the user avatar

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -21,6 +21,10 @@
 nav.navbar {
   background-color: white;
   border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+
+  button.share-button{
+    margin-top: 7px;
+  }
 }
 
 nav.tab-navigation {
