fix category navigation position and replacement when scrolling, fix some css

--- a/scss/partials/_category_nav.scss
+++ b/scss/partials/_category_nav.scss
@@ -6,6 +6,8 @@ div.company-dashboard {
     background-color: white;
     width: 100%;
     z-index: 1;
+    padding: 0px;
+    margin: 0px;
   }
 
   div.category {
