--- a/scss/partials/_company_header.scss
+++ b/scss/partials/_company_header.scss
@@ -1,22 +1,5 @@
-div.company-dashboard {
-
-  nav.company-header {
-    padding-top: 15px;
-    background-color: $oc_white;
-    border-bottom-color: transparent;
-  }
-
-  button.round {
-    border-radius: 24px;
-  }
-
-  div.company-logo {
-    padding-left: 15px;
-  }
-
-  div.company-share {
-    padding-right: 15px;
-  }
+div.company-header{
+  width: 100%;
 
   div.company-name {
     margin-top: 30px;
