--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -5,22 +5,90 @@ div.topic-list {
     margin-right: 10px;
     min-height: 100px;
     border-bottom: 1px solid #DFDFDF; /* gray */
-  }
 
-  div.topic div.topic-title {
-    padding-top: 20px;
-    font-size: 18px;
-  }
+    div.topic-title {
+      padding-top: 20px;
+      font-size: 19px;
+      font-weight: bold;
+    }
 
-  div.topic div.topic-headline {
-    font-size: 16px;
-    padding-top: 5px;
-    padding-bottom: 5px;
-  }
+    div.topic-headline {
+      font-size: 17px;
+      padding-top: 5px;
+      padding-bottom: 5px;
+    }
 
-  div.topic div.topic-date {
-    font-size: 12px;
-    font-style: italic;
-    color: #A6A6A3; /* gray */  
+    div.topic-date {
+      font-size: 12px;
+      font-style: italic;
+      color: #A6A6A3; /* gray */  
+    }
+
+    div.topic-body {
+      position: relative;
+      height: 0px;
+      // font-size: 12px;
+      // color: black;
+      overflow: hidden;
+
+
+      color: #191919;
+      border: 1px solid transparent;
+      font-weight: normal;
+      font-size: 15px;
+      // width: 500px;
+
+      &:focus,
+      &.editing {
+        outline: none;
+        overflow: hidden;
+        cursor: text;
+        border: 1px solid black;
+      }
+
+      img {
+        max-width: 500px;
+      }
+
+      ul img {
+        max-width: 460px;
+      }
+
+      ul ul img {
+        max-width: 420px;
+      }
+
+      p {
+         font-weight: normal;
+         font-size: 15px;
+      }
+
+      h1, h3 {
+        font-weight: 600;
+        font-size: 17px; 
+      }
+
+      &.no-data {
+        color: rgba(0, 0, 0, 0.4);
+      }
+
+      *::selection {
+        background: #C1E7F4;
+      }
+
+      *::-moz-selection {
+        background: #C1E7F4;
+      }
+
+      a {
+        font-weight: bold;
+        text-decoration: underline;
+        color: black;
+      }
+
+      &.expanded {
+        height: auto;
+      }
+    }
   }
 }
