remove x overflow on topic rows

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -1,8 +1,8 @@
 div.topic-list {
 
   div.topic {
-    margin-left: 10px;
-    margin-right: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     min-height: 100px;
     border-bottom: 1px solid #DFDFDF; /* gray */
 
