add screen to all media queries

--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -10,7 +10,7 @@
     border: 0;
 }
 
-@media (min-width: 960px) {
+@media screen and (min-width: 960px) {
   nav.navbar {
     width: auto;
   }
@@ -21,7 +21,7 @@
   }
 }
 
-@media (max-width: 960px) {
+@media screen and (max-width: 960px) {
   nav.navbar {
     width: auto;
 
