--- a/scss/partials/_base.scss
+++ b/scss/partials/_base.scss
@@ -52,7 +52,7 @@ div#app {
  .main {
     padding: 0px !important;
 }
-@media (min-width: 768px) {
+@media screen and (min-width: 768px) {
     .main {
         padding-right: 40px;
         padding-left: 40px;
