--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -71,7 +71,7 @@ nav.navbar {
 
   @media screen and (max-width: 960px){
     ul.navbar-right{
-      margin-right: -30px;
+      margin: 0 -30px 0 0;
     }
   }
 }
