--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -49,14 +49,15 @@ div.topic-list {
     div.topic-date {
       font-size: 12px;
       font-style: italic;
-      color: #A6A6A3; /* gray */  
+      color: #A6A6A3; /* gray */
+
+      label {
+        margin: 0px;
+      }
     }
 
     div.topic-body {
       position: relative;
-      height: 0px;
-      // font-size: 12px;
-      // color: black;
       overflow: hidden;
 
 
@@ -64,7 +65,6 @@ div.topic-list {
       border: 1px solid transparent;
       font-weight: normal;
       font-size: 15px;
-      // width: 500px;
 
       &:focus,
       &.editing {
