show animation when expanding a topic, show finances/growth components when the respective section are expanded, do not show the title 2 times, fix sizes

--- a/scss/partials/_topic.scss
+++ b/scss/partials/_topic.scss
@@ -18,6 +18,10 @@ div.topic-list {
       padding-bottom: 5px;
       width: 100%;
 
+      &.collapse {
+        height: 0px;
+      }
+
       &.chart-header-container {
         div.actual-container {
           h3 {
@@ -53,6 +57,7 @@ div.topic-list {
 
       label {
         margin: 0px;
+        font-weight: normal;
       }
     }
 
