change main and header font to respectively: Lora, serif and Arial

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 // General stuff
 @import "partials/_base";
 @import "partials/_colors";
+@import "modules/_fonts";
 
 // Components
 @import "partials/_growth";
