--- a/scss/partials/_category_nav.scss
+++ b/scss/partials/_category_nav.scss
@@ -8,28 +8,34 @@ div.company-dashboard {
     z-index: 2;
     padding: 0px;
     margin: 0px;
-  }
+    width: 100%;
+    -webkit-backface-visibility: hidden;
 
-  div.category {
-    min-height: 40px;
-    /* vertically center the text */
-    padding-top: 10px;
-    vertical-align: middle;
-    /* horizontally center the text */
-    text-align: center;
-  }
+    div.category {
+      width: 33.33333%;
+      padding-left: 15px;
+      padding-right: 15px;
+      float: left;
+      min-height: 40px;
+      /* vertically center the text */
+      padding-top: 10px;
+      vertical-align: middle;
+      /* horizontally center the text */
+      text-align: center;
 
-  div.category-label {
-    font-size: 16px;
-    padding-left: 5px;
-    padding-right: 5px;
-    display: inline-block;
-    color: #A6A6A3; /* gray */
-    min-height: 30px;
-  }
+      div.category-label {
+        font-size: 16px;
+        padding-left: 5px;
+        padding-right: 5px;
+        display: inline-block;
+        color: #A6A6A3; /* gray */
+        min-height: 30px;
+      }
 
-  div.category.active div.category-label {
-    color: black;
-    border-bottom: 3px solid black;
+      &.active div.category-label {
+        color: black;
+        border-bottom: 3px solid black;
+      }
+    }
   }
 }
