--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -12,19 +12,16 @@
 
 @media screen and (min-width: 960px) {
   nav.navbar {
-    width: auto;
-  }
-  nav.navbar > div {
-    width: auto;
-    padding-left: 85px;
-    padding-right: 85px;
+    & > div {
+      width: auto;
+      padding-left: 85px;
+      padding-right: 85px;
+    }
   }
 }
 
 @media screen and (max-width: 960px) {
   nav.navbar {
-    width: auto;
-
     div#navbar {
       width: auto;
       padding-right: 230px;
@@ -33,6 +30,7 @@
 }
 
 nav.navbar {
+  width: auto;
   background-color: white;
   border-bottom: 1px solid rgba(0, 0, 0, 0.6);
 
