--- a/scss/main.scss
+++ b/scss/main.scss
@@ -40,4 +40,4 @@
 @import "partials/_sidebar";
 @import "partials/_charts";
 @import "partials/_headline";
-@import "partials/_add_topic";
+@import "partials/_manage_topic";
