fix category nav bg color

--- a/scss/partials/_category_nav.scss
+++ b/scss/partials/_category_nav.scss
@@ -3,7 +3,7 @@ div.company-dashboard {
   div.category-nav {
     border-top: 1px solid #DFDFDF; /* gray */
     border-bottom: 1px solid #DFDFDF; /* gray */
-    background-color: white;
+    background-color: rgb(250, 250, 250);
     width: 100%;
     z-index: 2;
     padding: 0px;
