--- a/scss/partials/_navbar.scss
+++ b/scss/partials/_navbar.scss
@@ -1,7 +1,3 @@
-.navbar-inverse .navbar-nav>li>a{
-  padding: 5px;
-}
-
 /*
  * Top navigation
  * Hide default border to remove 1px line.
@@ -10,66 +6,73 @@
     border: 0;
 }
 
-@media screen and (min-width: 960px) {
-  nav.navbar {
+nav.navbar {
+  width: auto;
+  background-color: white;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
+  margin: 0px;
+
+  &>div{
+    margin: 0px;
+    padding: 0px;
+  }
+
+  @media screen and (max-width: 960px) {
+    div#navbar {
+      width: auto;
+      padding-right: 230px;
+    }
+  }
+
+  @media screen and (min-width: 960px) {
     & > div {
       width: auto;
       padding-left: 85px;
       padding-right: 85px;
     }
   }
-}
-
-@media screen and (max-width: 960px) {
-  nav.navbar {
-    div#navbar {
-      width: auto;
-      padding-right: 230px;
-    }
-  }
-}
-
-nav.navbar {
-  width: auto;
-  background-color: white;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.6);
 
   div.navbar-header {
     width: 100%;
-  }
+    margin: 0px;
+    padding: 0px;
 
-  button.share-button{
-    margin-top: 4px;
-    img {
-      // width: 20px;
-      height: 30px;
+    button.share-button{
+      margin-top: 4px;
+      img {
+        // width: 20px;
+        height: 30px;
+      }
+
+      &:hover, &:active, &:focus {
+        outline: none;
+      }
     }
 
-    &:hover, &:active, &:focus {
-      outline: none;
+    button.digest-button{
+      margin-top: 4px;
+      img {
+        // width: 20px;
+        height: 20px;
+      }
+
+      &:hover, &:active, &:focus {
+        outline: none;
+      }
     }
-  }
 
-  button.digest-button{
-    margin-top: 4px;
-    img {
-      // width: 20px;
-      height: 20px;
+    ul.navbar-right {
+      float: right;
+      margin-right: 50px;
+      &>li>a{
+        padding: 5px;
+      }
     }
 
-    &:hover, &:active, &:focus {
-      outline: none;
-    }
-  }
-
-  ul.navbar-right {
-    float: right;
-    margin-right: 50px;
-  }
-
-  @media screen and (max-width: 960px){
-    ul.navbar-right{
-      margin: 0 -30px 0 0;
+    @media screen and (max-width: 960px){
+      ul.navbar-right{
+        margin: 0;
+      }
     }
   }
 }
