no-user-select for all elements under the sortable list, fix some style

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -4,6 +4,7 @@
 @import "partials/_base";
 @import "partials/_colors";
 @import "modules/_fonts";
+@import "modules/_no_user_select";
 
 // Components
 @import "partials/_growth";
@@ -42,3 +43,4 @@
 @import "partials/_headline";
 @import "partials/_manage_topic";
 @import "partials/_topic_list_edit";
+@import "partials/_sortable";
