--- a/scss/partials/_sortable_list.scss
+++ b/scss/partials/_sortable_list.scss
@@ -2,7 +2,10 @@ ul.sortable {
   list-style: none;
   margin: 0px;
   padding: 0px;
+  @include no-user-select();
+
   li {
+    @include no-user-select();
     padding: 0px;
     margin: 0px;
   }
