--- a/scss/main.scss
+++ b/scss/main.scss
@@ -43,4 +43,4 @@
 @import "partials/_headline";
 @import "partials/_manage_topic";
 @import "partials/_topic_list_edit";
-@import "partials/_sortable";
+@import "partials/_sortable_list";
