improve topic edit component, add cancel and save callback (save does not work just yet)

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -45,3 +45,4 @@
 @import "partials/_topic_list_edit";
 @import "partials/_sortable_list";
 @import "partials/_edit_topic_button";
+@import "partials/_edit_topic";
