--- a/scss/partials/_manage_topic.scss
+++ b/scss/partials/_manage_topic.scss
@@ -1,12 +1,12 @@
-div.topic-row.manage-topic{
-  div.manage-topic-internal {
+div.topic-row.manage-topics{
+  div.manage-topics-internal {
     margin: 10px;
     border: 1px dotted black;
     height: 50px;
     vertical-align: middle;
     text-align: center;
 
-    div.manage-topic-cta{
+    div.manage-topics-cta{
       padding: 0;
       margin: 12px 0;
       font-size: 19px;
