--- a/scss/partials/_edit_topic.scss
+++ b/scss/partials/_edit_topic.scss
@@ -3,12 +3,14 @@ div.edit-topic {
 
   & > div {
     padding-top: 10px;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
   }
 
   div.edit-topic-title {
     input {
+      font-family: "#{$oc_headers_font}";
       border: 1px solid transparent;
-      font-size: 18px;
+      font-size: 20px;
       width: 100%;
 
       &:focus {
@@ -20,8 +22,9 @@ div.edit-topic {
 
   div.edit-topic-headline {
     input {
+      font-family: "#{$oc_headers_font}";
       border: 1px solid transparent;
-      font-size: 14px;
+      font-size: 18px;
       width: 100%;
 
       &:focus {
